[tool.poetry]
name = "otp-api"
version = "0.1.0"
description = ""
authors = ["Rommel Silva <kamakayasilva@gmail.com>"]
readme = "README.md"
packages = [{include = "otp_api"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
requests = "^2.22.0"
urllib3 = "1.25.11"
gunicorn = "^20.1.0"
google-cloud-secret-manager = "^2.15.1"
google-cloud-tasks = "2.5.1"
google-cloud-logging = "2.2.0"
google-api-python-client = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
